WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269526
Followup (
274683@main
): Ensure `position` is no longer in `NonInheritedFlags`
https://bugs.webkit.org/show_bug.cgi?id=269526
Summary
Followup (274683@main): Ensure `position` is no longer in `NonInheritedFlags`
Aditya Keerthi
Reported
2024-02-15 16:45:31 PST
274683@main
did not actually remove the bits.
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-02-15 17:37:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24567
EWS
Comment 2
2024-02-15 18:19:59 PST
Committed
274787@main
(52222cf447b7): <
https://commits.webkit.org/274787@main
> Reviewed commits have been landed. Closing PR #24567 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-15 18:22:31 PST
<
rdar://problem/123057644
>
WebKit Commit Bot
Comment 4
2024-02-16 10:41:09 PST
Re-opened since this is blocked by
bug 269594
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug