Followup (274683@main): Ensure `position` is no longer in `NonInheritedFlags` https://bugs.webkit.org/show_bug.cgi?id=269526

Reviewed by Tim Nguyen.

274683@main added `position` to `StyleBoxData` but did not actually remove the
bits from `NonInheritedFlags`.

* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::conservativelyCollectChangedAnimatableProperties const):
* Source/WebCore/rendering/style/RenderStyle.h:

Canonical link: https://commits.webkit.org/274787@main